# pedrams-python-template

./: Makefile  README.md  pyproject.toml  setup.cfg
