[metadata]
name = my_project
version = attr: my_project.__version__
description = my description
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
author = me
author_email = me@email.com

[options]
packages = find:
python_requires = >=3.6
tests_requires =
    pytest >= 6.2.3
    requests_mock >= 1.15
